Fix additional columns alignment

--- a/src/gridview/gridview.less
+++ b/src/gridview/gridview.less
@@ -88,6 +88,7 @@ thead tr th {
 .gridview-column-selector {
     width: 25px;
     max-width: 25px;
+    text-align: left;
 }
 
 .selected-gridview-item {
